# rsvp-wedding

./: .env  .gitignore  package-lock.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Countdown.tsx  Hero.tsx  index.css
frontend/src/api/: api.ts
frontend/src/components/: RSVP.tsx
frontend/src/components/Sections/: CelebrationSection.tsx  HeroSection.tsx  RSVPSection.tsx  StorySection.tsx
frontend/src/components/Sections/AboutUsSection/: AboutUsSection.css  AboutUsSection.tsx
frontend/src/components/Sections/CelebrationSection/: Celebration.css  CelebrationSection.tsx
frontend/src/components/Sections/CountdownSection/: CountdownSection.css  CountdownSection.tsx
frontend/src/components/Sections/Footer/: Footer.css  Footer.tsx
frontend/src/components/Sections/GallerySection/: GallerySection.tsx
frontend/src/components/Sections/Gift/: Gift.css  Gift.tsx
frontend/src/components/Sections/HeroSection/: HeroSection.css  HeroSection.tsx
frontend/src/components/Sections/LocationSection/: LocationSection.css  LocationSection.tsx
frontend/src/components/ui/: Countdown.tsx  accordion.tsx  checkbox.tsx  copyButton.tsx  input.tsx  modal.tsx  select.tsx  textarea.tsx
rsvp-api/: .gitignore  Dockerfile  Makefile  pyproject.toml  readme.md
rsvp-api/app/: config.py  crud.py  db.py  main.py  schemas.py
rsvp-api/terraform/: iam.tf  main.tf  outputs.tf
rsvp-api/tests/: conftest.py  test_confirm_attendance.py  test_create_guest.py  test_get_guest.py  test_get_guests_list.py  test_guest_download.py
(+11 files in other folders)
