[project]
name = "rsvp-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.9",
    "fastapi>=0.124.4",
    "mangum>=0.19.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.124.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
